fix: annoying safari bug where button was never aligned properly

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -629,7 +629,10 @@ aside {
     pointer-events: auto;
 
     button {
+      display: flex;
+      align-items: center;
       height: 100%;
+      min-height: 1.5rem;
       padding: 0 0.5rem;
       border: none;
       font-weight: bold;
